# notae

./: .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  config.toml
.github/workflows/: audit.yaml  ci.yml  continuous-improvement.yaml
crates/cli/: Cargo.toml
crates/cli/src/: command_line.rs  commands.rs  lib.rs
crates/cli/src/commands/: import.rs  init.rs  mod.rs  process.rs
crates/cli/src/import/: getpocket.rs
crates/common/: Cargo.toml
crates/common/src/: crawler.rs  dal.rs  data.rs  database.rs  mod.rs  processor.rs  settings.rs
crates/common/src/processor/: github.rs  medium.rs
crates/entity/: Cargo.toml
crates/entity/src/: mod.rs  prelude.rs  seaql_migrations.rs  tag.rs  url.rs  url_content.rs  url_tag.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220513_181235_create_url_table.rs  m20220513_181235_create_urls_table.rs  m20220513_182027_create_tag_table.rs  m20220513_182027_create_tags_table.rs  m20220521_013302_create_urls_tags_table.rs  m20220528_194635_create_urls_content_table.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/routes/: mod.rs  tag.rs  url.rs
entity/: Cargo.toml
entity/src/: mod.rs  tag.rs  url.rs
migration/src/: m20220513_181235_create_url_table.rs  m20220513_182027_create_tag_table.rs
src/: cli.rs  commands.rs  database.rs  import.rs  main.rs  settings.rs
src/commands/: import.rs  init.rs
src/import/: getpocket.rs
