[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/mod.rs"

[dependencies]
dirs = "4.0.0"
sea-orm = { version = "0.8.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
] }
config = "0.13.1"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
