[package]
name = "common"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "src/mod.rs"

[dependencies]
dirs = "4.0.0"
sea-orm = { version = "0.8.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
] }
config = "0.13.1"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
anyhow = { version = "1.0.57", features = ["backtrace"] }
