[package]
name = "entity"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
chrono = "0.4.19"
md5 = "0.7.0"
sea-orm = { version = "0.8.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
], default-features = false }
serde = { version = "1.0.137", features = ["serde_derive"] }
url = { version = "2.2.2", features = ["serde"] }
