[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "0.8.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print",
] }
entity = { path = "../entity" }
common = { path = "../common" }
serde_json = "1.0.81"
anyhow = { version = "1.0.57", features = ["backtrace"] }
serde = { version = "1.0.137", features = ["serde_derive"] }
